# next-js-sample

./: .eslintrc  .gitignore  README.md  justfile  next.config.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
.husky/: pre-commit
components/: appliance.tsx  applianceList.tsx  content.tsx  footer.tsx  header.tsx  layout.tsx  paragraph.tsx  post.tsx  sidebar.tsx  uiComponents.tsx  wasmSample.tsx
components/chart/: areaChart.tsx  barChart.tsx  lineChart.tsx  scatterChart.tsx
components/grid-layout/: addList.tsx  content.tsx  topBar.tsx  widget.tsx
maskedlm/: .gitignore  Cargo.toml  README.md
maskedlm/libs/: README.md
maskedlm/src/: lib.rs
pages/: _app.tsx  _document.tsx  about.tsx  counter.tsx  graph.tsx  index.tsx  next-js.tsx
src/components/: MyComponent.tsx
styles/: global_styles.scss
test/: testUtils.ts
test/pages/: index.test.tsx
wasm/: Cargo.toml  README.md
wasm/crates/maskedlm/: .gitignore  Cargo.toml  README.md
wasm/crates/maskedlm/src/: lib.rs
wasm/src/: lib.rs
