[package]
name = "maskedlm"
version = "0.1.0"
edition = "2018"
description = '''
sample WebAssembly.
'''
license = "xxx"
repository = ""


[dependencies]
tokenizers = "0.10.1"
tract-onnx = "0.15.3"
wasm-bindgen = "0.2.76"


[lib]
crate-type = ["cdylib"]


[package.metadata.wasm-pack.profile.release]
wasm-opt = false