[package]
name = "wasm-sample"
version = "0.1.0"
edition = "2018"
description = '''
sample WebAssembly.
'''
license = "xxx"
repository = ""


[dependencies]
wasm-bindgen = "0.2.76"
maskedlm = { path = "./crates/maskedlm", version = "0.1.0" }

[lib]
crate-type = ["cdylib"]


[package.metadata.wasm-pack.profile.release]
wasm-opt = false
